# code/mapper.py
@@ -3,15 +3,16 @@ def healthzHandler():
         "statusCode": 200,
         "body": "UP"
     }
-def getUploadURLHandler():
+def notImplemented():
     return {
-        "statusCode": 200,
+        "statusCode": 404,
         "body": "Method not implemented."
     }
 find_handler = {
     "GET": {
         "/api/v1/healthz": healthzHandler,
-        "/api/v1/student/getUploadURL": getUploadURLHandler
+        "/api/v1/student/getUploadURL": notImplemented,
+        "/api/v1/recruiter/getResumeListings": notImplemented,
     }
 }
 
@@ -20,7 +21,7 @@ def execute(method: str, path: str) -> None:
         func: function = find_handler[method][path]
         return func()
     except KeyError:
-        print(f"No handler found for method {method} and path {path}.")
+        print(f"ERROR: No handler found for method {method} and path {path}.")
         return {
             "statusCode": 404,
             "body": f"No handler found for method {method} path {path}."
