# docs/swagger-resume-book.yml
@@ -36,8 +36,26 @@ paths:
 
   /api/v1/student/getUploadURL:
     get:
-      summary: Ping the API
+      summary: Get URL for student to upload resume.
       operationId: studentGetUploadURL
+
+      x-amazon-apigateway-auth:
+        type: NONE
+
+      x-amazon-apigateway-integration:
+        responses:
+          default:
+            statusCode: 200
+        passthroughBehavior: when_no_match
+        httpMethod: POST
+        contentHandling: CONVERT_TO_TEXT
+        type: aws_proxy
+        uri: arn:aws:apigateway:us-east-1:lambda:path/2015-03-31/functions/arn:aws:lambda:us-east-1:298118738376:function:infra-resume-book-api-lambda/invocations
+
+  /api/v1/recruiter/getResumeListings:
+    get:
+      summary: Get resume listings based on criteria
+      operationId: recruiterGetResumeListings
 
       x-amazon-apigateway-auth:
         type: NONE
